<resources>
    <string name="app_name">MyWeather</string>

    <string name="enter_url_to_download_a_file">Enter http:// or https:// URL to download a file</string>
    <string name="start">Start</string>
    <string name="file_name">File name</string>
    <string name="default_percentage">30%</string>
    <string name="minutes_left">2 min out of 5 min</string>
    <string name="state_of_progress">In-Progress or Completed or stopped</string>
    <string name="dummy">Dummy</string>
    <string name="enter_anything">Enter anything</string>
    <string name="enter_city">Enter city</string>
    <string name="get_weather">What\'s the weather ?</string>
    <string name="no_query">No query entered, nothing to search for.</string>
    <string name="search">Search</string>
    <string name="weather_condition">Weather condition</string>
    <string name="region">Region</string>
    <string name="day">Day</string>
    <string name="max">Max (ºC)</string>
    <string name="min">Min (ºC)</string>
    <string name="title_activity_add_weather">What\'s the weather ? Add (+) to know weather of any place provided by the OpenMap API </string>
</resources>
